# lvsk-calendar-extended

./: .gitignore  Cargo.toml  README.md  ROADMAP.md  build.rs  config.example.toml  install.sh
src/: config.rs  holidays.rs  main.rs  theme.rs
src/app/: mod.rs
src/calendar/: mod.rs
src/db/: mod.rs
src/sync/: google.rs  mod.rs  worker.rs
src/tasks/: mod.rs
src/ui/: mod.rs
