[package]
name = "lifemanager"
version = "0.1.0"
edition = "2021"
description = "A riced TUI Life Manager with Google Calendar sync"

[[bin]]
name = "lm"
path = "src/main.rs"

[dependencies]
ratatui    = "0.28"
crossterm  = "0.28"
tokio      = { version = "1", features = ["full"] }
sqlx       = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "macros", "chrono", "uuid"] }
reqwest    = { version = "0.12", features = ["json", "rustls-tls"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
chrono     = { version = "0.4", features = ["serde"] }
toml       = "0.8"
dirs       = "5"
anyhow     = "1"
thiserror  = "1"
tracing              = "0.1"
tracing-subscriber   = { version = "0.3", features = ["env-filter"] }
tracing-appender     = "0.2"
uuid       = { version = "1", features = ["v4", "serde"] }
open       = "5"

[profile.release]
opt-level = 3
lto       = true
strip     = true
